61 Add api for meteo service
